update the security and password page, refactor html and js files

--- a/flashcard-backend/public/user.html
+++ b/flashcard-backend/public/user.html
@@ -89,7 +89,7 @@
         <hr style="width: 80%; border-color: #444;">
         <div class="sidebar-item"><span class="sidebar-icon">➕</span><span class="label">New Folder</span></div>
         <hr style="width: 80%; border-color: #444;">
-        <div class="sidebar-item" onclick="window.location.href='/userFlashcards.html'">
+        <div class="sidebar-item" id="flashcardsLink">
             <span class="sidebar-icon">🃏</span><span class="label">Flashcards</span>
         </div>
         <div class="sidebar-item"><span class="sidebar-icon">📄</span><span class="label">Study Guides</span></div>
@@ -102,85 +102,6 @@
         <h1 id="welcome">Hello, User</h1>
     </div>
 
-    <script>
-        const username = localStorage.getItem('username') || 'User';
-
-        const greetings = [
-            "Hello",
-            "Hi",
-            "Hey",
-            "Greetings",
-            "Salutations",
-            "Howdy",
-            "What's up",
-            "Yo",
-            "Ahoy",
-            "Welcome",
-            "Good day",
-            "Good to see you",
-            "Nice to see you",
-            "Hey there",
-            "Hiya",
-            "Bonjour",
-            "Hola",
-            "Ciao",
-            "Hallo",
-            "Namaste",
-            "Peace",
-            "Salam",
-            "Aloha",
-            "Shalom",
-            "Sup",
-            "Wassup",
-            "How’s it going",
-            "What's new",
-            "Pleasure to see you",
-            "Look who it is",
-            "Long time no see",
-            "Oi",
-            "Konnichiwa",
-            "Yassas",
-            "Annyeong",
-            "Marhaba",
-            "Sawubona",
-            "Good morning",
-            "Good afternoon",
-            "Good evening",
-            "Hey buddy",
-            "Hey friend",
-            "Hello there",
-            "Yo yo yo",
-            "Well hello",
-            "Hey pal",
-            "Cheers",
-            "Blessings",
-            "Howdy partner",
-            "Ahoy matey"
-        ];
-
-
-        const randomGreeting = greetings[Math.floor(Math.random() * greetings.length)];
-        document.getElementById('welcome').textContent = `${randomGreeting}, ${username}`;
-
-
-        const role = localStorage.getItem('role');
-        if (role !== 'user') {
-            alert('Unauthorized access. Redirecting to login.');
-            window.location.href = '/';
-        }
-
-        const sidebar = document.getElementById('sidebar');
-        sidebar.addEventListener('mouseenter', () => {
-            sidebar.classList.add('expanded');
-        });
-        sidebar.addEventListener('mouseleave', () => {
-            sidebar.classList.remove('expanded');
-        });
-
-        document.getElementById('logoutButton').addEventListener('click', () => {
-            localStorage.clear();
-            window.location.href = '/';
-        });
-    </script>
+    <script src="/js/user.js"></script>
 </body>
 </html>
