--- a/flashcard-backend/public/index.html
+++ b/flashcard-backend/public/index.html
@@ -3,76 +3,124 @@
 <head>
     <meta charset="UTF-8">
     <title>Login/Register - Flashcard App</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f7f7f7;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 400px;
+            margin: 40px auto;
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0 2px 16px rgba(0,0,0,0.08);
+            padding: 32px 28px 24px 28px;
+        }
+        h1 {
+            text-align: center;
+            margin-top: 32px;
+            color: #333;
+        }
+        h2 {
+            margin-top: 24px;
+            color: #444;
+            font-size: 1.2em;
+            border-bottom: 1px solid #eee;
+            padding-bottom: 6px;
+        }
+        form {
+            margin-bottom: 24px;
+        }
+        input[type="text"], input[type="password"], select {
+            width: 100%;
+            padding: 10px 12px;
+            margin: 8px 0 12px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 1em;
+            box-sizing: border-box;
+        }
+        button[type="submit"] {
+            width: 100%;
+            padding: 10px;
+            background: #4a90e2;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            font-size: 1em;
+            cursor: pointer;
+            margin-top: 8px;
+            transition: background 0.2s;
+        }
+        button[type="submit"]:hover {
+            background: #357ab8;
+        }
+        .password-toggle {
+            cursor: pointer;
+            margin-left: -32px;
+            position: relative;
+            background: none;
+            border: none;
+            font-size: 1.1em;
+            color: #888;
+            outline: none;
+            padding: 0 6px;
+            height: 32px;
+            display: flex;
+            align-items: center;
+        }
+        .input-group {
+            display: flex;
+            align-items: center;
+            position: relative;
+        }
+        .input-group input[type="password"],
+        .input-group input[type="text"] {
+            padding-right: 36px;
+        }
+        .password-requirements {
+            font-size: 0.93em;
+            color: #b94a48;
+            background: #f9eaea;
+            border-radius: 4px;
+            padding: 7px 10px;
+            margin-bottom: 10px;
+            margin-top: -8px;
+        }
+    </style>
 </head>
 <body>
     <h1>Flashcard Study App</h1>
+    <div class="container">
+        <h2>Register</h2>
+        <form id="registerForm">
+            <input type="text" id="registerUsername" placeholder="Username" required>
+            <div class="input-group">
+                <input type="password" id="registerPassword" placeholder="Password" required>
+                <button type="button" class="password-toggle" id="toggleRegisterPassword" title="Show/Hide Password">👁️</button>
+            </div>
+            <div class="password-requirements">
+                Password must be at least 8 characters, contain at least one uppercase letter, one lowercase letter, one number, and one special character.
+            </div>
+            <select id="registerRole">
+                <option value="user">User</option>
+                <option value="admin">Admin</option>
+            </select>
+            <button type="submit">Register</button>
+        </form>
 
-    <h2>Register</h2>
-    <form id="registerForm">
-        <input type="text" id="registerUsername" placeholder="Username" required>
-        <input type="password" id="registerPassword" placeholder="Password" required>
-        <select id="registerRole">
-            <option value="user">User</option>
-            <option value="admin">Admin</option>
-        </select>
-        <button type="submit">Register</button>
-    </form>
-
-    <h2>Login</h2>
-    <form id="loginForm">
-        <input type="text" id="loginUsername" placeholder="Username" required>
-        <input type="password" id="loginPassword" placeholder="Password" required>
-        <button type="submit">Login</button>
-    </form>
-
-    <script>
-        document.getElementById('registerForm').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const username = document.getElementById('registerUsername').value;
-            const password = document.getElementById('registerPassword').value;
-            const role = document.getElementById('registerRole').value;
-
-            const res = await fetch('/api/auth/register', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ username, password, role })
-            });
-
-            if (res.ok) {
-                alert('Registration successful! Please login.');
-            } else {
-                const error = await res.json();
-                alert('Registration failed: ' + error.message);
-            }
-        });
-
-        document.getElementById('loginForm').addEventListener('submit', async (e) => {
-        e.preventDefault();
-        const username = document.getElementById('loginUsername').value;
-        const password = document.getElementById('loginPassword').value;
-
-        const res = await fetch('/api/auth/login', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ username, password })
-        });
-
-        const data = await res.json();
-        if (res.ok) {
-            localStorage.setItem('role', data.role);
-            localStorage.setItem('username', username);
-
-            alert(`Logged in as ${data.role}`);
-            if (data.role === 'admin') {
-                window.location.href = '/admin.html';
-            } else {
-                window.location.href = '/user.html';
-            }
-        } else {
-            alert('Wrong username or password.');
-        }
-    });
-
-    </script>
+        <h2>Login</h2>
+        <form id="loginForm">
+            <input type="text" id="loginUsername" placeholder="Username" required>
+            <div class="input-group">
+                <input type="password" id="loginPassword" placeholder="Password" required>
+                <button type="button" class="password-toggle" id="toggleLoginPassword" title="Show/Hide Password">👁️</button>
+            </div>
+            <button type="submit">Login</button>
+        </form>
+    </div>
+    <script src="/js/auth.js"></script>
 </body>
 </html>
