Sidebar, userFlashcards.html. flashcards button and home button redirects, greetings
✅ User Dashboard / Homepage (userHomepage.html):
Created a clean user homepage with:

A collapsible/expandable sidebar that reveals labels on hover.

Sidebar items for Home, Your Library, Notifications, New Folder, Flashcards, Study Guides, Practice Tests, and Logout.

A dynamic greeting message that displays a random salutation + username on each refresh.

Sidebar behavior consistent across pages.

✅ Flashcards Page (userFlashcards.html):
Created a dedicated Flashcards page.

Moved the dictionary API-based auto-fill tool to this page:

User can enter a word.

The app fetches the part of speech and definition using the Dictionary API.

A save button is prepared to save flashcards (pending database integration for actual storage).

Sidebar remains consistent in style and behavior here too.

✅ Navigation & Redirections:
Sidebar Flashcards button redirects to userFlashcards.html.

Sidebar Home button redirects back to userHomepage.html.

Logout button clears local storage and redirects to login.

Implemented role-based protection (e.g., only users can access user pages, else redirected to login).

✅ UI/UX Enhancements:
Dynamic greeting generator with various greetings.

Sidebar visual and functional polish (icon alignment, behavior on hover).

Clean separation of features per page for scalability.

✅ Next Possible Steps (optional for next session):
Implement database storage for saved flashcards.

Allow users to view and delete saved flashcards.

Style flashcards into a deck-like interface.

Add additional features to the sidebar (e.g., Practice Tests functionality).

Prepare for pushing updates to GitHub in clean, atomic commits

--- a/flashcard-backend/public/userFlashcards.html
+++ b/flashcard-backend/public/userFlashcards.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>User Dashboard</title>
+    <title>User Flashcards</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -79,11 +79,15 @@
             align-items: center;
             text-align: center;
         }
+
+        #main-content input, #main-content button {
+            margin: 5px 0;
+        }
     </style>
 </head>
 <body>
     <div id="sidebar">
-        <div class="sidebar-item"><span class="sidebar-icon">🏠</span><span class="label">Home</span></div>
+        <div class="sidebar-item" id="homeLink"><span class="sidebar-icon">🏠</span><span class="label">Home</span></div>
         <div class="sidebar-item"><span class="sidebar-icon">📚</span><span class="label">Your Library</span></div>
         <div class="sidebar-item"><span class="sidebar-icon">🔔</span><span class="label">Notifications</span></div>
         <hr style="width: 80%; border-color: #444;">
@@ -99,9 +103,17 @@
     </div>
 
     <div id="main-content">
-        <h1 id="welcome">Hello, User</h1>
+        <h1>Flashcards</h1>
+
+        <input type="text" id="vocabWord" placeholder="Enter a word">
+        <button id="lookupBtn">Auto-fill Definition</button>
+
+        <p id="partOfSpeech"></p>
+        <p id="definition"></p>
+
+        <button id="saveBtn">Save Flashcard</button>
     </div>
 
-    <script src="/js/user.js"></script>
+    <script src="/js/userFlashcards.js"></script>
 </body>
 </html>
