--- a/flashcard-backend/public/user.html
+++ b/flashcard-backend/public/user.html
@@ -92,8 +92,15 @@
         <div class="sidebar-item" onclick="window.location.href='/userFlashcards.html'">
             <span class="sidebar-icon">🃏</span><span class="label">Flashcards</span>
         </div>
-        <div class="sidebar-item"><span class="sidebar-icon">📄</span><span class="label">Study Guides</span></div>
-        <div class="sidebar-item"><span class="sidebar-icon">📝</span><span class="label">Practice Tests</span></div>
+        <div class="sidebar-item" onclick="window.location.href='/createSet.html'">
+            <span class="sidebar-icon">🃏</span><span class="label">Create Flashcards</span>
+        </div>
+        <div class="sidebar-item" onclick="window.location.href='/createQuiz.html'">
+            <span class="sidebar-icon">📄</span><span class="label">Study Guides</span>
+        </div>
+        <div class="sidebar-item" onclick="window.location.href='/createQuiz.html'">
+            <span class="sidebar-icon">📝</span><span class="label">Quizzes</span>
+        </div>
 
         <div class="sidebar-item" id="logoutButton"><span class="sidebar-icon">🚪</span><span class="label">Logout</span></div>
     </div>
