--- a/flashcard-backend/public/userFlashcards.html
+++ b/flashcard-backend/public/userFlashcards.html
@@ -87,7 +87,7 @@
 </head>
 <body>
     <div id="sidebar">
-        <div class="sidebar-item" onclick="window.location.href='/user.html'"><span class="sidebar-icon">🏠</span><span class="label">Home</span></div>
+        <div class="sidebar-item"><span class="sidebar-icon">🏠</span><span class="label">Home</span></div>
         <div class="sidebar-item"><span class="sidebar-icon">📚</span><span class="label">Your Library</span></div>
         <div class="sidebar-item"><span class="sidebar-icon">🔔</span><span class="label">Notifications</span></div>
         <hr style="width: 80%; border-color: #444;">
@@ -96,8 +96,15 @@
         <div class="sidebar-item" onclick="window.location.href='/userFlashcards.html'">
             <span class="sidebar-icon">🃏</span><span class="label">Flashcards</span>
         </div>
-        <div class="sidebar-item"><span class="sidebar-icon">📄</span><span class="label">Study Guides</span></div>
-        <div class="sidebar-item"><span class="sidebar-icon">📝</span><span class="label">Practice Tests</span></div>
+        <div class="sidebar-item" onclick="window.location.href='/createSet.html'">
+            <span class="sidebar-icon">🃏</span><span class="label">Create Flashcards</span>
+        </div>
+        <div class="sidebar-item" onclick="window.location.href='/createQuiz.html'">
+            <span class="sidebar-icon">📄</span><span class="label">Study Guides</span>
+        </div>
+        <div class="sidebar-item" onclick="window.location.href='/createQuiz.html'">
+            <span class="sidebar-icon">📝</span><span class="label">Quizzes</span>
+        </div>
 
         <div class="sidebar-item" id="logoutButton"><span class="sidebar-icon">🚪</span><span class="label">Logout</span></div>
     </div>
