--- a/flashcard-backend/public/createQuiz.html
+++ b/flashcard-backend/public/createQuiz.html
@@ -94,28 +94,30 @@
   </style>
 </head>
 <body>
-<div id="sidebar">
-        <div class="sidebar-item"><span class="sidebar-icon">🏠</span><span class="label">Home</span></div>
-        <div class="sidebar-item"><span class="sidebar-icon">📚</span><span class="label">Your Library</span></div>
-        <div class="sidebar-item"><span class="sidebar-icon">🔔</span><span class="label">Notifications</span></div>
-        <hr style="width: 80%; border-color: #444;">
-        <div class="sidebar-item"><span class="sidebar-icon">➕</span><span class="label">New Folder</span></div>
-        <hr style="width: 80%; border-color: #444;">
-        <div class="sidebar-item" onclick="window.location.href='/userFlashcards.html'">
-            <span class="sidebar-icon">🃏</span><span class="label">Flashcards</span>
-        </div>
-        <div class="sidebar-item" onclick="window.location.href='/createSet.html'">
-            <span class="sidebar-icon">🃏</span><span class="label">Create Flashcards</span>
-        </div>
-        <div class="sidebar-item" onclick="window.location.href='/takeQuiz.html'">
-            <span class="sidebar-icon">📄</span><span class="label">Study Guides</span>
-        </div>
-        <div class="sidebar-item" onclick="window.location.href='/createQuiz.html'">
-            <span class="sidebar-icon">📝</span><span class="label">Quizzes</span>
-        </div>
+<div id="sidebar-container"></div>
 
-        <div class="sidebar-item" id="logoutButton"><span class="sidebar-icon">🚪</span><span class="label">Logout</span></div>
-    </div>
+<script>
+    fetch('/sidebar.html')
+        .then(response => response.text())
+        .then(html => {
+            document.getElementById('sidebar-container').innerHTML = html;
+
+            const sidebar = document.getElementById('sidebar');
+            if (sidebar) {
+                sidebar.addEventListener('mouseenter', () => sidebar.classList.add('expanded'));
+                sidebar.addEventListener('mouseleave', () => sidebar.classList.remove('expanded'));
+            }
+
+            const logoutButton = document.getElementById('logoutButton');
+            if (logoutButton) {
+                logoutButton.addEventListener('click', () => {
+                    localStorage.clear();
+                    window.location.href = '/';
+                });
+            }
+        });
+</script>
+
 
   <div id="main-content">
     <h2>Create a New Quiz</h2>
@@ -190,5 +192,18 @@
 
     addQuestion(); // Start with one question
   </script>
+
+    <script>
+    const sidebar = document.getElementById('sidebar');
+    sidebar.addEventListener('mouseenter', () => {
+        sidebar.classList.add('expanded');
+    });
+    sidebar.addEventListener('mouseleave', () => {
+        sidebar.classList.remove('expanded');
+    });
+  </script>
+  </body>
+  </html>
+
 </body>
 </html>
