--- a/flashcard-backend/public/user.html
+++ b/flashcard-backend/public/user.html
@@ -82,28 +82,8 @@
     </style>
 </head>
 <body>
-    <div id="sidebar">
-        <div class="sidebar-item"><span class="sidebar-icon">🏠</span><span class="label">Home</span></div>
-        <div class="sidebar-item"><span class="sidebar-icon">📚</span><span class="label">Your Library</span></div>
-        <div class="sidebar-item"><span class="sidebar-icon">🔔</span><span class="label">Notifications</span></div>
-        <hr style="width: 80%; border-color: #444;">
-        <div class="sidebar-item"><span class="sidebar-icon">➕</span><span class="label">New Folder</span></div>
-        <hr style="width: 80%; border-color: #444;">
-        <div class="sidebar-item" onclick="window.location.href='/userFlashcards.html'">
-            <span class="sidebar-icon">🃏</span><span class="label">Flashcards</span>
-        </div>
-        <div class="sidebar-item" onclick="window.location.href='/createSet.html'">
-            <span class="sidebar-icon">🃏</span><span class="label">Create Flashcards</span>
-        </div>
-        <div class="sidebar-item" onclick="window.location.href='/createQuiz.html'">
-            <span class="sidebar-icon">📄</span><span class="label">Study Guides</span>
-        </div>
-        <div class="sidebar-item" onclick="window.location.href='/createQuiz.html'">
-            <span class="sidebar-icon">📝</span><span class="label">Quizzes</span>
-        </div>
-
-        <div class="sidebar-item" id="logoutButton"><span class="sidebar-icon">🚪</span><span class="label">Logout</span></div>
-    </div>
+    
+    <div id="sidebar-container"></div>
 
     <div id="main-content">
         <h1 id="welcome">Hello, User</h1>
@@ -189,5 +169,29 @@
             window.location.href = '/';
         });
     </script>
+
+        <script>
+    fetch('/sidebar.html')
+        .then(response => response.text())
+        .then(html => {
+            document.getElementById('sidebar-container').innerHTML = html;
+
+            // Activate sidebar behavior after loading
+            const sidebar = document.getElementById('sidebar');
+            sidebar.addEventListener('mouseenter', () => {
+                sidebar.classList.add('expanded');
+            });
+            sidebar.addEventListener('mouseleave', () => {
+                sidebar.classList.remove('expanded');
+            });
+
+            document.getElementById('logoutButton').addEventListener('click', () => {
+                localStorage.clear();
+                window.location.href = '/';
+            });
+        });
+</script>
+
+
 </body>
 </html>
