--- a/flashcard-backend/public/userFlashcards.html
+++ b/flashcard-backend/public/userFlashcards.html
@@ -99,6 +99,88 @@
                 margin-top: 20px;
                 width: 350px;
             }
+
+            #flashcard-container {
+            margin-top: 40px;
+            text-align: center;
+            }
+
+            #flashcard {
+                width: 300px;
+                height: 200px;
+                border: 1px solid #ccc;
+                background-color: #2d2d50;
+                color: white;
+                font-size: 24px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: 0 auto 20px auto;
+                border-radius: 10px;
+                cursor: pointer;
+                user-select: none;
+            }
+
+            #controls {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 10px;
+            }
+
+            #card-counter {
+                font-weight: bold;
+            }
+            #flashcardContainer {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 20px;
+            }
+
+            #flashcard {
+                width: 300px;
+                height: 180px;
+                border: 2px solid #333;
+                border-radius: 8px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 20px;
+                text-align: center;
+                cursor: pointer;
+                user-select: none;
+                background-color: #f9f9f9;
+                box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
+                transition: transform 0.5s;
+            }
+
+            #controls {
+                margin-top: 15px;
+                display: flex;
+                align-items: center;
+                gap: 10px;
+            }
+
+            button {
+                padding: 5px 10px;
+                cursor: pointer;
+            }
+
+            #counter {
+                font-weight: bold;
+            }
+
+            .flashcard {
+                background-color: #fff;
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                padding: 10px;
+                margin-bottom: 10px;
+                width: 350px;
+            }
+
+
         </style>
     </head>
     <body>
@@ -130,6 +212,20 @@
 
         <h3>Saved Flashcard Sets</h3>
         <div id="savedSets"></div>
+        
+        <!-- Flashcard Viewer -->
+        <div id="flashcard-container">
+            <div id="flashcard" onclick="flipCard()">Front of Card</div>
+
+            <div id="controls">
+                <button onclick="prevCard()">⬅</button>
+                <span id="card-counter">1 / X</span>
+                <button onclick="nextCard()">➡</button>
+                <button onclick="shuffleCards()">🔀 Shuffle</button>
+            </div>
+        </div>
+
+
     </div>
 
     <script>
@@ -244,19 +340,85 @@
             const container = document.getElementById('savedSets');
             container.innerHTML = '';
             sets.forEach(set => {
-                const div = document.createElement('div');
-                div.className = 'flashcard';
-                div.innerHTML = `
-                    <strong>${set.title}</strong><br>
-                    ${set.description}<br>
-                    <a href="/viewSet.html?id=${set._id}">View Set</a>
-                `;
-                container.appendChild(div);
-            });
+    const div = document.createElement('div');
+    div.className = 'flashcard';
+    div.innerHTML = `
+                <strong>${set.title}</strong><br>
+                ${set.description}<br>
+                <a href="/viewSet.html?id=${set._id}">View Set</a>
+                <button onclick="loadSetToStudy('${set._id}')">Study Set</button>
+            `;
+            container.appendChild(div);
+        });
+
         }
 
         loadSavedSets();
         addCard();
+
+
+        let currentSetCards = [];
+        let currentCardIndex = 0;
+        let showingFront = true;
+
+        // Load cards from a selected set
+        async function loadSetToStudy(setId) {
+            const cards = await fetch(`/api/flashcards/cards/by-set/${setId}`).then(res => res.json());
+            if (!cards.length) {
+                alert("This set has no cards!");
+                return;
+            }
+            currentSetCards = cards;
+            currentCardIndex = 0;
+            showingFront = true;
+            displayCurrentCard();
+        }
+
+        function displayCurrentCard() {
+            if (!currentSetCards.length) return;
+
+            const card = currentSetCards[currentCardIndex];
+            const cardText = showingFront ? card.front : card.back;
+            document.getElementById('flashcard').textContent = cardText;
+            document.getElementById('card-counter').textContent = `${currentCardIndex + 1} / ${currentSetCards.length}`;
+        }
+
+        function nextCard() {
+            if (currentSetCards.length === 0) return;
+            currentCardIndex = (currentCardIndex + 1) % currentSetCards.length;
+            showingFront = true;
+            displayCurrentCard();
+        }
+
+        function prevCard() {
+            if (currentSetCards.length === 0) return;
+            currentCardIndex = (currentCardIndex - 1 + currentSetCards.length) % currentSetCards.length;
+            showingFront = true;
+            displayCurrentCard();
+        }
+
+        function shuffleCards() {
+            for (let i = currentSetCards.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [currentSetCards[i], currentSetCards[j]] = [currentSetCards[j], currentSetCards[i]];
+            }
+            currentCardIndex = 0;
+            showingFront = true;
+            displayCurrentCard();
+        }
+
+        function flipCard() {
+            showingFront = !showingFront;
+            displayCurrentCard();
+        }
+
+        document.addEventListener('keydown', (e) => {
+            if (e.code === 'Space') {
+                e.preventDefault();
+                flipCard();
+            }
+        });
+
     </script>
 
 </body>
