--- a/flashcard-backend/public/takeQuiz.html
+++ b/flashcard-backend/public/takeQuiz.html
@@ -114,7 +114,9 @@
       try {
         const res = await fetch(`/api/quizzes/${quizId}/submit`, {
           method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
+          headers: { 'Content-Type': 'application/json',
+                      'Authorization': `Bearer ${token}`
+           },
           body: JSON.stringify({ answers })
         });
 
