--- a/flashcard-backend/public/sidebar.html
+++ b/flashcard-backend/public/sidebar.html
@@ -10,6 +10,9 @@
     <div class="sidebar-item" onclick="window.location.href='/userFlashcards.html'">
         <span class="sidebar-icon">🃏</span><span class="label">Flashcards</span>
     </div>
+    <div class="sidebar-item" onclick="window.location.href='/aiFlashcards.html'">
+        <span class="sidebar-icon">🤖</span><span class="label">AI Flashcards</span>
+    </div>
     <div class="sidebar-item" onclick="window.location.href='/takeQuiz.html'">
         <span class="sidebar-icon">📄</span><span class="label">Study Guides</span>
     </div>
